--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,38 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Update and install dependencies
+      - name: Update and install essential dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential libboost-all-dev
+          sudo apt-get install -y \
+            build-essential \
+            libtool \
+            autotools-dev \
+            automake \
+            pkg-config \
+            libssl-dev \
+            libevent-dev \
+            bsdmainutils \
+            libboost-system-dev \
+            libboost-filesystem-dev \
+            libboost-chrono-dev \
+            libboost-program-options-dev \
+            libboost-test-dev \
+            libboost-thread-dev \
+            libjpeg-dev \
+            libqt5gui5 \
+            libqt5core5a \
+            libqt5dbus5 \
+            qttools5-dev \
+            qttools5-dev-tools \
+            libprotobuf-dev \
+            protobuf-compiler \
+            libqrencode-dev \
+            libdb5.3++-dev \
+            libdb5.3++ \
+            libdb5.3-dev \
+            libzmq3-dev \
+            libminiupnpc-dev
 
       - name: Build project
         run: |
